--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1.5",
+        "phpoffice/phpspreadsheet": "^1.30",
         "yaza/laravel-google-drive-storage": "^4.1"
     },
     "require-dev": {
